--- a/app/locations/_components/_styles/map.module.css
+++ b/app/locations/_components/_styles/map.module.css
@@ -1,30 +1,50 @@
 /* Map.module.css */
+.mapContainer {
+  display: flex;
+  width: 100%;
+  height: 80vh;
+  position: relative;
+}
+
+.sidebar {
+  width: 350px;
+  height: 100%;
+  overflow-y: auto;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  padding-left: 5px;
+  border-radius: 4px;
+}
+
 .map {
-    width: 100%;
-    height: 80vh; /* 固定高度 */
-    position: relative;
-    z-index: 0;
-    margin-bottom: 2rem; /* 添加間距 */
+  flex: 1;
+  height: 100%;
+  position: relative;
+  z-index: 0;
 }
 
 .locationsList {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto; /* 自動高度 */
-    padding: 1rem;
-    background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 768px) {
+  .mapContainer {
+    flex-direction: column;
+    height: 100vh;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: 40%;
+  }
+
   .map {
-    height: 50vh; /* 手機版高度 */
+    height: 60%;
   }
 }
-
 
 :global(.leaflet-control-locate a) {
   cursor: pointer;
