--- a/app/friends/_styles/modal.module.css
+++ b/app/friends/_styles/modal.module.css
@@ -35,6 +35,15 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 20px;
+}
+.rightsection {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 20px;
 }
 .closeButton {
   background: none;
@@ -46,9 +55,10 @@
   top: 0px;
 }
 .uername {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
   margin: 10px;
+  margin-bottom: 20px;
 }
 
 .userInfo {
@@ -146,4 +156,62 @@
   background-color: #ff7f50;
   color: white;
   transform: scale(1.1);
+}
+.bottomsection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* 成功 */
+.success {
+  margin-left: 10px;
+}
+.checkmark {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: block;
+  stroke-width: 2;
+  stroke: #4bb71b;
+  stroke-miterlimit: 10;
+  box-shadow: inset 0px 0px 0px #4bb71b;
+  animation: fill 0.4s ease-in-out 0.4s forwards,
+    scale 0.3s ease-in-out 0.9s both;
+  position: relative;
+  top: 5px;
+  right: 5px;
+  margin: 0 auto;
+}
+.checkmarkCircle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #4bb71b;
+  fill: #fff;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmarkCheck {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes scale {
+  0%,
+  100% {
+    transform: none;
+  }
+
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
 }
