--- a/app/chat/[chatroomId]/chatroom.module.css
+++ b/app/chat/[chatroomId]/chatroom.module.css
@@ -1,14 +1,14 @@
 .tempbody {
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  /* align-items: center; */
+  min-height: 80vh;
+  padding: 0 20px;
 }
 .chatContainer {
   width: 100%;
-  max-width: 400px;
-  /* height: 500px; */
+
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -31,6 +31,8 @@
   overflow-y: auto;
   border-bottom: 1px solid #ddd;
   background-color: #f9f9f9;
+  word-wrap: break-word;
+  min-height: 60vh;
 }
 
 .inputArea {
@@ -61,6 +63,18 @@
 
 .chatContainer button:hover {
   background-color: #45a049;
+}
+.connect {
+  background-color: #45a049;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
+}
+.disconnect {
+  background-color: #333333a4;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
 }
 
 /* 消息樣式 */
