--- a/app/videos/components/_styles/sort.module.css
+++ b/app/videos/components/_styles/sort.module.css
@@ -3,8 +3,12 @@
   display: flex;
   flex-direction: column;
   width: 25%;
+  /* min-width: 200px; */
+  /* background-color: rgb(231, 238, 241);; */
+  /* border-bottom: 1px solid #eee; */
   margin-bottom: 10px;
   align-items: center;
+  
 }
 
 .sortTitle{
@@ -32,7 +36,7 @@
   cursor: pointer;
   position: relative;
   transition: transform 0.3s ease;
-
+  margin: auto;
 }
 
 .btnHome:hover {
@@ -57,15 +61,38 @@
   
 }
 
-@media (width <= 991px) {
+.selectBtn {
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  font-size: 20px;
+  color: white;
+  background-color: #f87808;
+  border: none;
+  border-radius: 3px;
+  display: none;
+  z-index: 20;
+}
+
+@media (width <= 1200px) {
   .container {
     /* width: 30%; */
     margin-bottom: 10px;
-
-    
   }
   .btnHome{
     width: 70%;
-    font-size: 12px;
+    font-size: 16px;
+  }
+
+}
+
+@media (width <= 960px) {
+  .selectBtn {
+    display: block;
+    margin-bottom: 15px;
+
+  }
+  .container{
+    width: 100%;
   }
 }
