cartcontext功能增加、step2頁面更動、header購物車數量增加顯示、商品詳細頁加入購物車跟租借元件修改

--- a/app/carts/_components/_styles/order-summary.module.css
+++ b/app/carts/_components/_styles/order-summary.module.css
@@ -81,6 +81,7 @@
     transform: skew(-35deg);
     background-color: #eb854a;
     border: none;
+    border-radius: 3px;
     align-self: stretch;
     gap: 8px;
     margin-top: 49px;
