--- a/app/_components/_styles/header.module.css
+++ b/app/_components/_styles/header.module.css
@@ -92,3 +92,27 @@
   font-size: 14px;
   font-family: 'Noto Serif TC', serif;
 }
+
+.cartIcon {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  color: white;
+}
+
+.cartCount {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background: red;
+  color: white;
+  font-size: 0.75rem;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
