--- a/app/carts/_components/_styles/cart-product-item.module.css
+++ b/app/carts/_components/_styles/cart-product-item.module.css
@@ -31,7 +31,8 @@
     aspect-ratio: 0.83;
     object-fit: contain;
     align-self: stretch;
-    /* width: 80px; */
+    width: 80px;
+    height: 80px;
     margin: auto 0;
   }
   
@@ -96,7 +97,7 @@
   .rentalDate {
     flex-direction: column;
     align-self: stretch;
-    width: 178px;
+    /* width: 178px; */
     margin: auto 0;
     display: flex;
     gap: 8px;
@@ -160,10 +161,10 @@
     flex-direction: column;
     justify-content: center;
     align-self: stretch;
-    width: 80px;
+    width: 70px;
     min-height: 32px;
     margin: auto 0;
-    padding: 6px 8px;
+    /* padding: 6px 8px; */
     font-size: 12px;
     display: flex;
   }
@@ -175,15 +176,16 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-    width: 64px;
+    /* width: 64px; */
     display: flex;
+    font-size: 14px;
   }
   
   .quantityButtons button {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 18px;
     padding: 0;
     display: flex;
     align-items: center;
