--- a/app/carts/data/_styles/data.module.css
+++ b/app/carts/data/_styles/data.module.css
@@ -1,251 +1,592 @@
-.body2 {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    width: 100%;
-    font-weight: 400;
-  }
-  .progress {
-    display: flex;
-    text-align: center;
-    /* background-color: #87a0b8; */
+.data {
+    background-color: #fff;
+    /* flex-wrap: wrap; */
     justify-content: center;
     align-items: center;
-    gap: 40px;
-    /* width: 100%;
-    max-width: 1440px; */
-    height: 200px;
-    /* padding: 40px; */
+    gap: 40px 50px;
+    padding: 80px 20px;
     font-family:
-      Noto Sans TC,
+      Inter,
+      -apple-system,
+      Roboto,
+      Helvetica,
       sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    /* overflow: hidden; */
-  }
-  @media (width<=991px) {
-    .progress {
-      flex-wrap: wrap;
-      padding: 20px;
-    }
-  }
-  @media (width<=640px) {
-    .progress {
-      padding: 10px;
-    }
-  }
-  .progressItem {
-    color: #9b9cb3;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    display: flex;
-    padding: 30px;
-    /* border-bottom:3px solid #eb854a; */
-  }
-  
-  /* .progressLine {
-    background-color: #587896;
-    width: 236px;
-    height: 2px;
-  } */
-  @media (width<=991px) {
-    .progressLine {
-      width: 100px;
-    }
-  }
-  
-  .sectionA {
-    background-color: transparent;
-    /* width: 50%; */
-    padding: 20px;
-    margin: auto;
-    border-radius: 3px;
-  }
-  /* 商品下拉選單 */
-  .card {
-    background-color: #cdcbc3;
-    border-radius: 3px;
-    max-width: 1024px;
-    margin: 0 auto;
-    overflow: hidden;
-  }
-  .header {
-    color: #ffffff;
-    letter-spacing: 1.5px;
-    background-color: #b8b4a7;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    padding: 32px;
-    border-radius: 3px;
-    font-family: Inter, sans-serif;
-    font-size: 24px;
     display: flex;
   }
-  @media (width<=640px) {
-    .header {
-      text-align: center;
-      flex-direction: column;
-      gap: 10px;
-      min-width: 375px;
+  
+  .form {
+    color: #6c7275;
+    background-color: #f0eeee;
+    border-radius: 3px;
+    align-self: start;
+    width: 643px;
+    min-width: 375px;
+    padding: 16px 24px;
+    font-size: 12px;
+    font-weight: 700;
+    box-shadow: 0 4px 10px #c6bfbf;
+  }
+  @media (width<=991px) {
+    .form {
+      max-width: 100%;
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
-  .span {
-    font-weight: 600;
+  .div {
+    color: #153b5a;
+    font-family:
+      Poppins,
+      -apple-system,
+      Roboto,
+      Helvetica,
+      sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1;
+    padding-bottom: 10px;
   }
-  
-  .productTable {
-    color: #fff;
+  .name {
+    white-space: nowrap;
+    text-transform: uppercase;
+    width: 595px;
+    max-width: 100%;
+    margin-top: 12px;
+    line-height: 1;
+  }
+  @media (width<=991px) {
+    .name {
+      white-space: initial;
+    }
+  }
+  .input {
+    border: 1px solid var(--Black-300, #cbcbcb);
+    /* backgroundcolor: #fff; */
+    background-color: #fff;
+    border-radius: 3px;
     width: 100%;
-    font-family:
-      Noto Sans TC,
-      sans-serif;
-  }
-  .tableHeader {
-    text-align: center;
-    grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
-    padding: 20px;
-    font-size: 18px;
-    display: grid;
+    min-height: 35px;
+    margin-top: 12px;
+    display: flex;
   }
   @media (width<=991px) {
-    .tableHeader {
-      grid-template-columns: 1fr;
-      gap: 10px;
+    .input {
+      max-width: 100%;
     }
   }
-  /* 商品行 */
-  .productRow {
-    text-align: center;
-    border-bottom: 1px solid #ffffff1a;
-    grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
-    align-items: center;
-    padding: 20px;
-    display: grid;
+  .address {
+    white-space: nowrap;
+    text-transform: uppercase;
+    width: 595px;
+    max-width: 100%;
+    margin-top: 12px;
+    line-height: 1;
   }
   @media (width<=991px) {
-    .productRow {
-      grid-template-columns: 1fr;
-      gap: 10px;
+    .address {
+      white-space: initial;
+    }
+  }
+  .input2 {
+    backgroundcolor: #fff;
+    background-color: #fff;
+    border: 1px solid #c6bfbf;
+    border-radius: 3px;
+    width: 100%;
+    min-height: 35px;
+    margin-top: 12px;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .input2 {
+      max-width: 100%;
+    }
+  }
+  .phone {
+    white-space: nowrap;
+    text-transform: uppercase;
+    width: 595px;
+    max-width: 100%;
+    margin-top: 12px;
+    line-height: 1;
+  }
+  @media (width<=991px) {
+    .phone {
+      white-space: initial;
+    }
+  }
+  .email {
+    white-space: nowrap;
+    text-transform: uppercase;
+    width: 595px;
+    max-width: 100%;
+    margin-top: 12px;
+    line-height: 1;
+  }
+  @media (width<=991px) {
+    .email {
+      white-space: initial;
+    }
+  }
+  .div2 {
+    color: #6c7275;
+    width: 595px;
+    max-width: 100%;
+    margin-top: 12px;
+  }
+  .td {
+    background-color: #fff;
+    border: 1px solid #0000004d;
+    border-radius: 3px;
+    width: 100%;
+    min-height: 56px;
+    margin-top: 14px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .td {
+      max-width: 100%;
     }
   }
 
-  .productImage {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-  .productInfo {
-    width: 150px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-  }
-  @media (width<=991px) {
-    .productImage {
-      margin: 0 auto;
-    }
-  }
-  /* 合計區塊 */
-  .summary {
-    text-align: right;
-    color: #ffffff;
-    padding: 20px;
-    font-family:
-      Noto Sans TC,
-      sans-serif;
-    font-size: 20px;
-  }
-  .div {
-    margin-top: 25px;
-  }
-  .section {
-    background-color: rgb(234, 237, 227);
-    width: 50%;
-    padding: 20px;
-    margin: auto;
-  }
-  .formCard {
-    /* background-color: transparent; */
-    max-width: 1046px;
-    margin: 0 auto;
-    overflow: hidden;
-  }
-  @media (width<=991px) {
-    .formCard {
-      padding: 10px;
-    }
-  }
-  @media (width<=640px) {
-    .formCard {
-      margin: 10px;
-    }
-  }
-  /*橘底標題*/
-  .formHeader {
-    color: #000000;
-    height: 35px;
-    /* background-color: #eb854a; */
-    border: 1px solid #000000;
-    padding: 12px;
+
+
+
+  .orderSummary {
+    white-space: nowrap;
+    background-color: #f0eeee;
     border-radius: 3px;
-    font-size: 20px;
-    display: flex;
-    align-items: center;  /* 垂直置中 */
+    width: 643px;
+    min-width: 375px;
+    padding: 16px 24px;
+    box-shadow: 0 4px 10px #c6bfbf;
   }
-  .formGroup {
+  @media (width<=991px) {
+    .orderSummary {
+      max-width: 100%;
+      white-space: initial;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+  .div3 {
+    color: #153b5a;
+    letter-spacing: -0.6px;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1;
+    padding-bottom: 10px;
+  }
+  @media (width<=991px) {
+    .div3 {
+      max-width: 100%;
+    }
+  }
+  .productsCoupon {
+    width: 100%;
+    margin-top: 12px;
+  }
+  @media (width<=991px) {
+    .productsCoupon {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+
+
+
+
+
+  .cartItem {
+    width: 100%;
+    min-height: 96px;
+  }
+  @media (width<=991px) {
+    .cartItem {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .content {
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: stretch;
+    gap: 16px;
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+  }
+  @media (width<=991px) {
+    .content {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .img {
+    aspect-ratio: 0.83;
+    object-fit: contain;
+    object-position: center;
+    flex-shrink: 0;
+    width: 80px;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .info {
+    flex-wrap: wrap;
+    flex: 1;
+    justify-content: start;
+    align-items: stretch;
+    gap: 40px 67px;
+    min-width: 240px;
+    height: 100%;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .info {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .product {
+    color: #153b5a;
+    width: 82px;
+  }
+  @media (width<=991px) {
+    .product {
+      white-space: initial;
+    }
+  }
+  .div4 {
+    font-feature-settings:
+      "liga" off,
+      "clig" off;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 2;
+  }
+  .kg {
+    font-feature-settings:
+      "liga" off,
+      "clig" off;
+    margin-top: 17px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+  }
+  .x1 {
+    color: #0b3760;
+    margin-top: 17px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1;
+  }
+  .dayprice {
+    color: #153b5a;
+    flex: 1;
+    justify-content: start;
+    align-items: center;
+    gap: 40px 50px;
+    min-width: 240px;
+    height: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 2;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .dayprice {
+      white-space: initial;
+    }
+  }
+  .css20250411202504154 {
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+    line-height: 22px;
+  }
+  .css500 {
+    text-align: center;
+    align-self: stretch;
+    width: 47px;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .css2000 {
+    text-align: center;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .cartItem2 {
+    width: 100%;
+    min-height: 96px;
+    margin-top: 24px;
+  }
+  @media (width<=991px) {
+    .cartItem2 {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .div5 {
+    font-feature-settings:
+      "liga" off,
+      "clig" off;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 2;
+  }
+  .pickupstore {
+    color: #153b5a;
     flex-direction: column;
-    gap: 14px;
-    padding: 20px;
+    justify-content: center;
+    align-items: end;
+    width: 100%;
+    margin-top: 12px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
     display: flex;
   }
-  .formLabel {
-    color: #000000;
+  @media (width<=991px) {
+    .pickupstore {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .info2 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px 100px;
+    width: 591px;
+    max-width: 100%;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .info2 {
+      white-space: initial;
+    }
+  }
+  .gym {
+    font-size: 18px;
+    font-weight: 600;
+    text-align: right;
+    align-self: stretch;
+    width: 82px;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .div6 {
+    text-align: center;
+    align-self: stretch;
+    width: 80px;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .info3 {
+    text-align: center;
+    /* align-self: stretch; */
+    gap: 10px;
+    width: 80px;
+  }
+  @media (width<=991px) {
+    .info3 {
+      white-space: initial;
+    }
+  }
+  .fields {
+    color: #153b5a;
+    width: 100%;
+    min-height: 162px;
+    margin-top: 12px;
     font-family:
-      Noto Sans TC,
+      Poppins,
+      -apple-system,
+      Roboto,
+      Helvetica,
       sans-serif;
     font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
   }
-  .formInput {
-    background-color: #fff;
-    border: none;
-    border-bottom:1px solid #000000;
-    width:100%;                           
-    height: 25px;
-    /* display: block; */
-  }
-  .formTextarea {
-    background-color: #fff;
-    border: 1px solid #0000004d;
-    /* box-shadow: 0px 0px 10px rgb(79, 79, 79); */
-    width: 100%;
-    height: 139px;
-  }
-  /* .sectionC,
-  .sectionD {
-    background-color: transparent;
-    width: 50%;
-    padding: 20px;
-    margin: auto;
-  } */
-  .invoiceSection {
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    padding: 20px;
-    display: grid;
-  }
-  /* @media (width<=991px) {
-    .invoiceSection {
-      grid-template-columns: 1fr;
+  @media (width<=991px) {
+    .fields {
+      max-width: 100%;
+      white-space: initial;
     }
-  } */
-  .dropdown {
-    background-color: #fff;
-    border: 1px solid #0000004d;
+  }
+  .orderSummaryInfo {
+    border-color: #cdd5db;
+    border-bottom-width: 1px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
     width: 100%;
-    height: 35px;
+    min-height: 54px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    font-family:
+      Inter,
+      -apple-system,
+      Roboto,
+      Helvetica,
+      sans-serif;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .orderSummaryInfo {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .content2 {
+    flex: 1;
+    width: 100%;
+  }
+  @media (width<=991px) {
+    .content2 {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .titleAmount {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px 100px;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .titleAmount {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .div7 {
+    font-size: 16px;
+    text-align: right;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .css4000 {
+    text-align: center;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .orderSummaryInfo2 {
+    border-color: #cdd5db;
+    border-bottom-width: 1px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    width: 100%;
+    min-height: 54px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .orderSummaryInfo2 {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .content3 {
+    flex: 1;
+    width: 100%;
+  }
+  @media (width<=991px) {
+    .content3 {
+      max-width: 100%;
+      white-space: initial;
+      padding-right: 20px;
+    }
+  }
+  .div8 {
+    font-size: 16px;
+    text-align: right;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .css0 {
+    text-align: center;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .orderSummaryInfo3 {
+    color: #153b5a;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    width: 100%;
+    min-height: 54px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    font-size: 20px;
+    line-height: 1.4;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .orderSummaryInfo3 {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .content4 {
+    flex: 1;
+    width: 100%;
+  }
+  @media (width<=991px) {
+    .content4 {
+      max-width: 100%;
+      white-space: initial;
+    }
+  }
+  .titleAmount2 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+  }
+  @media (width<=991px) {
+    .titleAmount2 {
+      max-width: 100%;
+      white-space: initial;
+      margin-right: -9px;
+    }
+  }
+  .div9 {
+    font-size: 20px;
+    text-align: right;
+    font-feature-settings:
+      "liga" off,
+      "clig" off;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .css40002 {
+    font-size: 20px;
+    text-align: center;
+    font-feature-settings:
+      "liga" off,
+      "clig" off;
+    align-self: stretch;
+    margin-top: auto;
+    margin-bottom: auto;
   }
   
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+  }
