--- a/app/member/_styles/member.module.css
+++ b/app/member/_styles/member.module.css
@@ -1,3 +1,136 @@
+/* #region ================= Breadcrumb  Start ====================== */
+.breadcrumbContainer {
+  position: relative;
+}
+.breadcrumb {
+  width: 100%;
+  background-color: transparent;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.breadcrumbItem {
+  position: relative;
+  padding: 0 20px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbItem:not(:last-child)::after {
+  content: '›';
+  position: absolute;
+  top: 13px;
+  right: -5px;
+  color: #666;
+  font-size: 20px;
+  z-index: 2;
+}
+
+.breadcrumbItem a {
+  cursor: pointer;
+  color: #666;
+  font-size: 18px;
+  line-height: 60px;
+  text-decoration: none;
+  height: 60px;
+  position: relative;
+  display: block;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.breadcrumbItem:hover a {
+  transform: translateY(-2px);
+  color: #666;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+
+.breadcrumbItem:hover a::after,
+.breadcrumbItem.active a::after {
+  width: 100%;
+}
+
+.breadcrumbItem.active a {
+  color: #f87808;
+  font-weight: 600;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+/* #endregion ================= Breadcrumb ====================== */
+
+/* #region ================= Select  Start ====================== */
+
+.selectArea {
+  width: 15%;
+  align-items: center;
+  margin: 0 15px;
+  display: block;
+  flex-direction: column;
+  transition: width 0.3s ease, height 0.3s ease;
+}
+
+.selectBtn {
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  font-size: 20px;
+  color: white;
+  background-color: #f87808;
+  margin: auto;
+  border: none;
+  border-radius: 3px;
+  display: none;
+  position: absolute;
+  left: 15px;
+  top: -65px;
+  z-index: 20;
+}
+.selectPart {
+  width: 100%;
+  list-style: none;
+  margin-top: 15px;
+}
+.categoryTitle {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+  align-items: center;
+  color: rgb(16, 19, 21);
+  background-color: #dee5e7;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.selectPart li {
+  cursor: pointer;
+  width: 85%;
+  height: 60px;
+  font-size: 18px;
+  text-align: center;
+  line-height: 60px;
+  color: #666;
+  padding: 0 20px;
+  border-bottom: #cdc9c9 1px solid;
+  margin: auto;
+  position: relative;
+  transition: all 0.2s;
+}
+
+.selectPart li:hover {
+  border-bottom: #48767b 2px solid;
+  transform: translateY(-2px);
+  transition: all 0.2s;
+}
+
+.selectPart li.active {
+  color: #f87808;
+  font-weight: 400;
+  border-bottom: #f87808 1px solid;
+}
+/* #endregion ================= Select  End ====================== */
+
 .container {
   display: flex;
   justify-content: center;
