修改找GYM友，聊天好友頁面，新增表情安裝包

--- a/app/chat/_styles/chatList.module.css
+++ b/app/chat/_styles/chatList.module.css
@@ -1,6 +1,6 @@
 /* 聊天室預設畫面 */
 .intoChatRoom {
-  min-height: 100vh;
+  height: 100%;
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -27,59 +27,36 @@
 }
 /* end */
 .chatsPage {
-  min-height: 80vh;
+  height: 100%;
   width: 80%;
   margin: 0 20px;
   padding: 20px;
-  background-color: #e5effa;
-  border-radius: 8px;
+  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 3px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-.chatsPage h1 {
+.chatsPage h5 {
   text-align: center;
-  margin-bottom: 20px;
-}
-
-.search {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.search input {
-  padding: 8px;
-  width: 100%;
-  margin-right: 10px;
-}
-
-.search button {
-  padding: 8px 12px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.search button:hover {
-  background-color: #45a049;
-}
-
-.chatsPage h2 {
   margin-top: 30px;
   font-size: 20px;
   margin-bottom: 10px;
 }
 
+.dash {
+  border-top: 2px solid #bbb;
+  margin: 10px 0;
+}
 .chatsPage ul {
+  margin-top: 20px;
   list-style: none;
   padding: 0;
 }
 
 .chatsPage ul li {
-  background-color: #fff;
+  background-color: #f6f6f6;
   margin: 5px 0;
-  padding: 10px;
+  padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
 }
