--- a/app/friend-list/friendList.module.css
+++ b/app/friend-list/friendList.module.css
@@ -4,7 +4,7 @@
   max-width: 600px;
   margin: 100px auto;
   padding: 20px;
-  background-color: #e5effa;
+  background-color: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
