地圖卡片樣式修改 新增教練卡片icon

--- a/app/coaches/_components/_styles/search-form.module.css
+++ b/app/coaches/_components/_styles/search-form.module.css
@@ -1,5 +1,6 @@
 .searchContainer {
     padding: 10px;
+    position: relative;
   }
   
   .searchForm {
@@ -19,7 +20,7 @@
   }
 
 
-  .button {
+  .searchForm button {
     width: 60px;
     padding: 12px 10px;
     background-color: #f87808;
@@ -32,6 +33,25 @@
   }
   
   /* 可以添加懸停效果 */
-  .button:hover {
+  .searchForm button:hover {
     background-color: #e56c00;
+  }
+
+  .clearSearch {
+    position: absolute;
+    bottom: -20px;
+    right: 0;
+    cursor: pointer;
+    margin-right: 10px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    background-color: #fff;
+    border: none;
+    color: rgb(62, 62, 62);
+    cursor: pointer;
+    font-size: 15px;
+  }
+
+  .clearSearch:hover {
+    color: #db6318;
   }
