--- a/app/coaches/_components/_styles/coaches-card.module.css
+++ b/app/coaches/_components/_styles/coaches-card.module.css
@@ -1,127 +1,139 @@
 .coaches-card {
-    display: flex;
-    width: 450px;
-    height: 220px;
-    position: relative;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-    overflow: hidden;
-    transition: all 0.3s ease;
-    letter-spacing: 1.5;
-    margin-bottom: 5px;
-  }
+  display: flex;
+  width: 450px;
+  height: 220px;
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  letter-spacing: 1.5;
+  margin-bottom: 5px;
+}
+
+.coaches-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card-left {
+  width: 170px;
+  background-color: #db6318; /* 橘色背景 */
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.avatar-container {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 4px solid white;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-right {
+  flex: 1;
+  background-color: #0b3760; /* 深藍色背景 */
+  color: white;
+  padding: 25px 20px;
+  position: relative;
+}
+
+.name {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0 0 10px 0;
+}
+
+.divider {
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.skill {
+  font-size: 16px;
+  margin: 6px 0;
+  opacity: 0.9;
+}
+.contact {
+  font-size: 14px;
+  margin: 5px 0;
+  opacity: 0.9;
   
-  .coaches-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  }
-  
-  .card-left {
-    width: 170px;
-    background-color: #db6318; /* 橘色背景 */
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-  }
-  
+}
+
+.description {
+  font-size: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  opacity: 0.9;
+}
+.icon {
+  margin-right: 5px;
+  font-size: 17px;
+  flex-shrink: 0;
+}
+.contactItem, .skill, .description {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+.contactItem {
+  margin-top: 10px;
+}
+
+.arrow {
+  color: #1d3459;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.arrow-circle {
+  position: absolute;
+  bottom: 8px;
+  right: 20px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.hovered .arrow-circle {
+  transform: scale(1.1);
+}
+
+.hovered .avatar {
+  transform: scale(1.05);
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+@media (max-width: 440px) {
   .avatar-container {
-    width: 140px;
-    height: 140px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     overflow: hidden;
-    border: 4px solid white;
+    border: 3px solid white;
   }
-  
-  .avatar {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .card-right {
-    flex: 1;
-    background-color: #0b3760;; /* 深藍色背景 */
-    color: white;
-    padding: 25px 20px;
-    position: relative;
-  }
-  
-  .name {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0 0 10px 0;
-  }
-  
-  .divider {
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.5);
-    margin-bottom: 10px;
-    width: 100%;
-
-  }
-  
-  .skill {
-    font-size: 16px;
-    margin: 5px 0;
-    opacity: 0.9;
-  }
-  .contact {
-    font-size: 14px;
-    margin: 5px 0;
-    opacity: 0.9;
-  }
-  
-  .description {
-    font-size: 16px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    opacity: 0.9;
-  }
-
-  .arrow {
-    color: #1D3459;
-    font-weight: bold;
-    font-size: 18px;
-  }
-  
-  
-  .arrow-circle {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    transition: transform 0.3s ease;
-    cursor: pointer;
-  }
-  
-  .hovered .arrow-circle {
-    transform: scale(1.1);
-  }
-  
-  .hovered .avatar {
-    transform: scale(1.05);
-  }
-  
-  .avatar {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease;
-  }
-
-  @media (max-width: 440px){
-    .avatar-container {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      overflow: hidden;
-      border: 3px solid white;
-    }
-  }
+}
