--- a/app/locations/_components/_styles/map.module.css
+++ b/app/locations/_components/_styles/map.module.css
@@ -7,13 +7,13 @@
 }
 
 .sidebar {
-  width: 350px;
+  width: 370px;
   height: 100%;
   overflow-y: auto;
   background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1;
-  padding-left: 5px;
+  padding-left: 10px;
   border-radius: 4px;
 }
 
@@ -35,14 +35,25 @@
     flex-direction: column;
     height: 100vh;
   }
-
   .sidebar {
     width: 100%;
-    height: 40%;
+    height: 45%;
   }
-
   .map {
     height: 60%;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .mapContainer {
+    height: 100vh;
+  }
+  .sidebar {
+    height: 35%;
+    padding: auto;
+  }
+  .map {
+    height: 65%;
   }
 }
 
@@ -66,4 +77,3 @@
     stroke-width: 1;
   }
 }
-
