--- a/app/member/_styles/register.module.css
+++ b/app/member/_styles/register.module.css
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   justify-content: center;
-  max-width: 1440px;
-  margin: 0px auto;
+  width: 100%;
+  margin: 140px auto;
 }
 .left {
   display: flex;
