--- a/app/carts/data/_styles/data.module.css
+++ b/app/carts/data/_styles/data.module.css
@@ -60,8 +60,8 @@
     }
   }
   .input {
-    border: 1px solid var(--Black-300, #cbcbcb);
-    /* backgroundcolor: #fff; */
+    /* border: 1px solid var(--Black-300, #cbcbcb); */
+    border: none;
     background-color: #fff;
     border-radius: 3px;
     width: 100%;
@@ -88,9 +88,9 @@
     }
   }
   .input2 {
-    backgroundcolor: #fff;
-    background-color: #fff;
-    border: 1px solid #c6bfbf;
+    /* background-color: #fff; */
+    /* border: 1px solid #c6bfbf; */
+    border: none;
     border-radius: 3px;
     width: 100%;
     min-height: 35px;
@@ -584,9 +584,48 @@
     margin-top: auto;
     margin-bottom: auto;
   }
-  
-  .error {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
+
+  .formCard {
+    /* background-color: transparent; */
+    max-width: 1046px;
+    margin: 0 auto;
+    overflow: hidden;
   }
+  
+  .formHeader {
+    color: #153b5a;
+    height: 35px;
+    margin-top: 12px;
+    font-size: 22px;
+    font-weight: 400;
+    display: flex;
+    align-items: center; 
+  }
+
+  .formLabel {
+    color: #6c7275;
+    font-family:
+      Noto Sans TC,
+      sans-serif;
+    font-size: 12px;
+    margin: 12px 0px 0px;
+  }
+
+  .dropdown {
+    background-color: #fff;
+    border: 1px solid #0000004d;
+    width: 100%;
+    height: 35px;
+    margin: 12px 0px 0px;
+  }
+
+.error {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.errorInput {
+  border: 2px solid red;
+  background-color: #ffe6e6;
+}
