header呈現頭貼及名字、頭貼路由路徑修改、schema新增頭貼驗證、auth-context新增傳入資料

--- a/app/_components/_styles/header.module.css
+++ b/app/_components/_styles/header.module.css
@@ -140,7 +140,13 @@
   justify-content: center;
   font-weight: bold;
 }
-
+.navAvatar{
+  display: flex;
+  align-items: center;
+}
 .navAvatar img{
-  width: 20px;
+  width: 35px;
+  border-radius: 3px;
+  margin-right: 8px;
+  border: 1px solid salmon;
 }
