--- a/app/member-center/_styles/member-layout.module.css
+++ b/app/member-center/_styles/member-layout.module.css
@@ -2,17 +2,17 @@
   background-color: #f4f4f4;
   display: flex;
   justify-content: center;
-  max-height: 100vh;
+  min-height: 100vh;
   padding: 20px;
   margin-top: 70px;
   min-height: 100vh;
 }
 .centerSidebar {
   width: 20%;
-  max-height: 100vh;
+  min-height: 100vh;
 }
 .centerList {
   width: 70%;
-  max-height: 100vh;
+  min-height: 100vh;
   padding: 50px;
 }
