--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -146,9 +146,11 @@
   color: #f87808;
   font-weight: 400;
   border-bottom: #f87808 1px solid;
+  background-color: #f1ecec;
+
 }
 .selectPart:has(li.active) {
-  background-color: #dbedf9;
+  /* background-color: #dbedf9; */
   border-radius: 3px;
 }
 /* #endregion ================= Select  End ====================== */
@@ -165,13 +167,22 @@
   margin: 18px;
   width: 100%;
 }
-
+.memberAdmin{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  margin: auto;
+}
+.memberAdmin p{
+  font-size: 30px;
+}
 .memberNoAdmin {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 180px;
+  height: 300px;
   margin: auto;
 }
 .memberSpan {
@@ -358,4 +369,5 @@
   align-items: center;
   gap: 20px;
   margin-top: 20px;
+  font-size: 20px;
 }
