--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -167,6 +167,12 @@
   /* background-color: #dbedf9; */
   border-radius: 3px;
 }
+
+.selectPart li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 /* #endregion ================= Select  End ====================== */
 
 /* #region ================= Member no admin  Start ====================== */
@@ -251,6 +257,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  line-height: 1.5;
 }
 .cardBody {
   display: flex;
