--- a/app/member-center/chat/[chatroomId]/chatroom.module.css
+++ b/app/member-center/chat/[chatroomId]/chatroom.module.css
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: center;
   padding: 0 20px;
-  height: 100%;
+  height: 95%;
   box-sizing: border-box;
   border-radius: 3px;
+  min-width: 380px;
 }
 .chatContainer {
   width: 100%;
