--- a/app/articles/styles/articles.module.css
+++ b/app/articles/styles/articles.module.css
@@ -354,14 +354,14 @@
 }
 
 .pagination a:hover {
-  background-color: #db6318c7;
+  background-color: #f87808;
   transform: scale(1.1);
 }
 
 .pagination .active {
   cursor: default;
   font-weight: bold;
-  background-color: #db6318;
+  background-color: #f87808;
 }
 
 .pagination .disabled {
