--- a/app/chat/[chatroomId]/chatroom.module.css
+++ b/app/chat/[chatroomId]/chatroom.module.css
@@ -2,13 +2,12 @@
   display: flex;
   justify-content: center;
   padding: 0 20px;
-  height: 100%;
+  max-height:100px;
   box-sizing: border-box;
   border-radius: 3px;
 }
 .chatContainer {
   width: 100%;
-  height: 100%;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -109,4 +108,9 @@
   margin: 0 5px;
   font-size: 20px;
   fill: #333;
+}
+@media (max-width: 1430px) {
+  .tempbody {
+    min-height: 80vh;
+  }
 }
