--- a/app/friends/_styles/modal.module.css
+++ b/app/friends/_styles/modal.module.css
@@ -71,13 +71,14 @@
 }
 
 .userInfo p {
-  line-height: 1.7rem;
+  line-height: 2rem;
   margin: 10px;
 }
 .userInfo p span {
   padding: 5px;
   margin-right: 5px;
-  background-color: #dee5e7;
+  /* background-color: #dee5e7; */
+  border-bottom: 2px solid #dee5e7;
 }
 /* button */
 .sendBtn {
@@ -146,17 +147,14 @@
   margin: 10px;
   border-radius: 3px;
   cursor: pointer;
+  color: #333;
 }
 .hastag svg {
   width: 14px;
   height: 14px;
   fill: #333;
 }
-.hashtag li:hover {
-  background-color: #ff7f50;
-  color: white;
-  transform: scale(1.1);
-}
+
 .bottomsection {
   display: flex;
   justify-content: center;
