--- a/app/member-center/chat/[chatroomId]/chatroom.module.css
+++ b/app/member-center/chat/[chatroomId]/chatroom.module.css
@@ -6,10 +6,11 @@
   box-sizing: border-box;
   border-radius: 3px;
   min-width: 380px;
+  max-height: 80vh;
 }
 .chatContainer {
   width: 100%;
-  height: 100%;
+  min-height: 600px;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
