--- a/app/member-center/chat/_styles/chatList.module.css
+++ b/app/member-center/chat/_styles/chatList.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  justify-content: center;
+  margin-top: 50px;
   align-items: center;
 }
 .intoChatRoom p {
