--- a/app/_components/_styles/loading.module.css
+++ b/app/_components/_styles/loading.module.css
@@ -31,3 +31,12 @@
     0%{translate: -232% 0}
     to{translate:  232% 0}
   }
+
+  .container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
