--- a/app/classes/_components/_styles/calendar.module.css
+++ b/app/classes/_components/_styles/calendar.module.css
@@ -2,7 +2,7 @@
 .container {
     width: 100%;
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 50px auto;
     padding: 20px;
   }
   
@@ -166,6 +166,19 @@
     border-right: none;
     opacity: 0.7;
   }
+
+  .expired {
+    background-color: #e0e0e0;
+    pointer-events: none;
+    color: #666;
+    border-right: none;
+    opacity: 0.7;
+  }
+
+  .expired .time,
+  .expired .name {
+    color: #666;
+  }
   
   .available {
     color: #081a00;
@@ -267,4 +280,3 @@
     padding-bottom: 10px;
   }
 }
-
