--- a/app/member-center/chat/_styles/chatLayout.module.css
+++ b/app/member-center/chat/_styles/chatLayout.module.css
@@ -1,17 +1,18 @@
 .chatLayout {
   background-color: #f4f4f4;
   display: flex;
-  max-height: 100vh;
+  height: 100%;
+  max-height: 80vh;
   position: relative;
+  margin-bottom: 30px;
 }
 .friendSidebar {
   width: 30%;
-  min-height: 80vh;
-  margin-bottom: 30px;
+  height: 100%;
 }
 .messageArea {
   width: 70%;
-  max-height: 80vh;
+  height: 100%;
 }
 .selectBtn {
   cursor: pointer;
@@ -38,7 +39,6 @@
     display: none;
     position: absolute;
     z-index: 20;
-    background-color: #ebeff1;
     width: 50%;
   }
   .messageArea {
