--- a/app/products/[productId]/_components/_styles/breadcrumb.module.css
+++ b/app/products/[productId]/_components/_styles/breadcrumb.module.css
@@ -1,6 +1,6 @@
 .breadcrumbContainer {
-    /* max-width: 300px; */
-    margin-left: 14%;
+
+    margin-top: 55px;
     position: relative;
     font-family: 'Noto Serif TC', serif;
     box-sizing: border-box;
