--- a/app/review/_component/_styles/review.module.css
+++ b/app/review/_component/_styles/review.module.css
@@ -1,20 +1,27 @@
 .review{
     margin-top: 100px;
     height: 80vh;
+    margin-left: 350px;
+    
 }
 .productReview{
     display: flex;
-    flex-direction: row;}
+    flex-direction: row;
+    background-color: rgb(242, 243, 244);
+width: 70%;}
+    
+
 
 
 .img{
     width: 100%;
-    
+    border-radius: 5px;
 }
 
 .imgContainer{
     width: 300px;
     object-fit: cover;
+    
 
 }
 
@@ -25,25 +32,50 @@
     justify-content: center;
     font-size: 18px;
     align-items: center;
-
 }
 
 .contentItem{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    margin-left: 20px;
+    justify-content: space-between;
+    margin-left: 30px;
+    line-height: 35px;
+    font-weight: 600;
+    /* background-color: rgb(249, 252, 253); */
+    padding: 10px;
+    border-radius: 10px;
+    border: white 2px solid;
+}
+
+.comment{
+    height: 100px;
+    width: 200%;
+    border: 1px solid white;
+    background-color: white;
+    padding: 5px;
+    font-size: 14px;
 }
 
 .latest_review{
     /* background-color: rgb(239, 148, 20); */
-    border-radius: 5px;
-    height: 100px;
-    margin-left: 15px;
+    /* height: 100px; */
+    margin-left: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: start;
+    border-left: 2px gray solid;
+    padding-left: 30px;
+}
 
+.button{
+    color: rgb(243, 90, 35);
+    border: none;
+    /* background-color: rgb(243, 90, 35); */
+    height: 30px;
+    margin-top: 10px;
+    width: 100px;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 /* review.module.css */
